fix: footer navigation on mobile
- change column witdth.
- prevent overflow.

--- a/src/_includes/css/critical.css
+++ b/src/_includes/css/critical.css
@@ -171,10 +171,6 @@ section {
   padding: 1.5rem 1rem;
 }
 
-section > h2 {
-  margin-top: 0;
-}
-
 section + section {
   margin-top: 2rem;
 }
@@ -208,20 +204,27 @@ footer {
   flex-wrap: wrap;
   flex-direction: column;
   margin-top: var(--step-4);
+  max-width: 90ch;
+  margin: auto;
+}
+
+footer p.license {
+  padding: 0 2rem;
 }
 
 nav[aria-label='main navigation'] {
   padding-top: var(--step-4);
   padding-bottom: var(--step-4);
   border-top: 0.0125rem solid var(--external-link);
+  width: 100%;
 }
 
 nav[aria-label='main navigation'] ul {
-  max-width: 90ch;
   display: grid;
   list-style: none;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
   gap: 3rem;
+  padding: 0 2rem;
 }
 
 nav[aria-label='main navigation'] a {
@@ -364,7 +367,8 @@ html.no-js .toggle {
 }
 
 @media screen and (max-width: 500px) {
-  .autofit-grid {
+  .autofit-grid,
+  nav[aria-label='main navigation'] ul {
     display: flex;
     flex-direction: column;
   }
